# LearnPaddle

./: README.md
note1/: README.md
note1/code/: housing.py
note10/: .gitignore  README.md
note10/code/: DownloadImages.py  data_provider.py  infer.py  pascal_voc_conf.py  rename_images.py  show_infer_image.py
note10/data/: label_list  test.txt  (+2 more)
note11/: README.md
note12/: README.md
note13/: .gitignore  README.md
note14/: README.md
note14/code/Android_code/TestPaddle2/app/: CMakeLists.txt  FindPaddle.cmake  build.gradle  paddle_jni.map
note14/code/Android_code/TestPaddle2/app/paddle-android/: README.md
note14/code/Android_code/TestPaddle2/app/src/androidTest/java/com/yeyupiaoling/testpaddle/: ExampleInstrumentedTest.java
note14/code/Android_code/TestPaddle2/app/src/main/: AndroidManifest.xml
note14/code/Android_code/TestPaddle2/app/src/main/assets/: README.md
note14/code/Android_code/TestPaddle2/app/src/main/cpp/: binary_reader.cpp  binary_reader.h  image_recognition.cpp  image_recognition.h
note14/code/Android_code/TestPaddle2/app/src/main/java/com/yeyupiaoling/testpaddle/: ImageRecognition.java  MainActivity.java
note14/code/Android_code/TestPaddle2/app/src/main/java/com/yeyupiaoling/testpaddle/utils/: CameraUtil.java  ImageUtils.java  ToastUtil.java
note14/code/Android_code/TestPaddle2/app/src/main/res/layout/: activity_main.xml
note14/code/Android_code/TestPaddle2/app/src/main/res/values/: strings.xml
note14/code/Android_code/TestPaddle2/app/src/test/java/com/yeyupiaoling/testpaddle/: ExampleUnitTest.java
note2/: README.md
note3/: README.md
note4/: README.md
note5/: README.md
note6/: README.md
note7/: README.md
note8/: .gitignore  README.md
note9/: .gitignore  README.md
(+580 files in other folders)
